# autonomous_manipulator

./: .gitignore  .gitmodules  README.md
Model_ws/src/collision_detector/: CMakeLists.txt
Model_ws/src/get_angles/: joint_state_subscriber.py
Vlad's Crap/Model_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Vlad's Crap/realsense/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
rgmc/: frames.gv  object_converted.pcd
rgmc/build_isolated/: catkin_make_isolated.cache
rgmc/build_isolated/camera_moveit_config/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/camera_sim_config/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/collision_detector/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/collision_objects/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/forward_kinematics/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/get_angles/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/ndx_manipulation/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/ndx_util/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/pcl_object_recognition/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/pcl_pose_estimation/: CTestConfiguration.ini  CTestTestfile.cmake
rgmc/build_isolated/pcl_realsense/: CTestConfiguration.ini  (+1 more)
rgmc/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
rgmc/src/: README.md
rgmc/src/ndx_manipulation/: .gitignore  CMakeLists.txt  package.xml  setup.py
rgmc/src/ndx_manipulation/action/: RotaryGripperCommand.action  TFGCommand.action
rgmc/src/ndx_manipulation/config/: demat_gripper_node.yaml  parallel_gripper_node.yaml  parallel_gripper_std_node.yaml
rgmc/src/ndx_manipulation/launch/: demat_gripper.launch  demat_gripper_sim.launch  parallel_gripper.launch  parallel_gripper_sim.launch  parallel_gripper_std.launch
rgmc/src/ndx_manipulation/scripts/: SEP_node.py  demat_gripper_node  demat_gripper_sim_node  ndx_a_node  parallel_gripper_node  parallel_gripper_sim_node  parallel_gripper_std_node
rgmc/src/ndx_manipulation/src/ndx_manipulation/: Dynamixel.py  Hand.py  M2_XM430.py  Moley_XM430.py  NDX_C.py  Parallel_XM430.py  RotaryGripper.py  SEPHand.py  T42_XM430.py  rotary_gripper_util.py
rgmc/src/ndx_manipulation/src/ndx_manipulation/test/: M2_reset.py  M2_test.py  Moley_test.py  NDX_C_industry_day.py  NDX_C_reset.py  NDX_C_test.py  Parallel_Gripper_test.py  T42_reset.py  T42_test.py  XL320_test.py  dynamixel_test.py
rgmc/src/ndx_manipulation/test/: demat_gripper_client.py  parallel_gripper_client.py  parallel_gripper_std_client.py
rgmc/src/object_recognition/: CMakeLists.txt  package.xml
rgmc/src/object_recognition/src/: identify_object.cpp
rgmc/src/pcl_object_recognition/: CMakeLists.txt  package.xml
rgmc/src/pcl_object_recognition/src/: recognize_object.cpp
rgmc/src/pcl_pose_estimation/: CMakeLists.txt  package.xml
rgmc/src/pcl_pose_estimation/data/: kdtree.idx  training_data.h5  training_data.list
rgmc/src/pcl_pose_estimation/data/data_2024-9-9_9-50-3/: point_cloud_frame_0_vfh.pcd  point_cloud_frame_10_vfh.pcd  point_cloud_frame_11_vfh.pcd  point_cloud_frame_12_vfh.pcd  point_cloud_frame_13_vfh.pcd  point_cloud_frame_14_vfh.pcd  point_cloud_frame_15_vfh.pcd  point_cloud_frame_16_vfh.pcd  point_cloud_frame_17_vfh.pcd  point_cloud_frame_18_vfh.pcd  point_cloud_frame_19_vfh.pcd  point_cloud_frame_1_vfh.pcd  point_cloud_frame_20_vfh.pcd  point_cloud_frame_21_vfh.pcd  point_cloud_frame_22_vfh.pcd  point_cloud_frame_23_vfh.pcd  point_cloud_frame_24_vfh.pcd  point_cloud_frame_25_vfh.pcd  point_cloud_frame_26_vfh.pcd  point_cloud_frame_27_vfh.pcd  point_cloud_frame_28_vfh.pcd  point_cloud_frame_2_vfh.pcd  point_cloud_frame_3_vfh.pcd  point_cloud_frame_4_vfh.pcd  point_cloud_frame_5_vfh.pcd  point_cloud_frame_6_vfh.pcd  point_cloud_frame_7_vfh.pcd  point_cloud_frame_8_vfh.pcd  point_cloud_frame_9_vfh.pcd
rgmc/src/pcl_pose_estimation/launch/: build_tree.launch  capture_pcd.launch  nearest_neighbor.launch  nearest_neighbor_cluster.launch
rgmc/src/pcl_pose_estimation/src/: build_tree.cpp  capture_pcd.cpp  capture_pcd_with_filter.cpp  nearest_neighbor.cpp  nearest_neighbor_cluster.cpp  test.cpp
rgmc/src/pcl_realsense/: CMakeLists.txt
rgmc/src/pcl_realsense/launch/: realsense_camera_node.launch
rgmc/src/pcl_realsense/src/: pcl_publisher.cpp  pcl_subscriber.cpp
rgmc/src/pointcloud_filter_testing/: CMakeLists.txt  package.xml
rgmc/src/pointcloud_filter_testing/launch/: filter_pcd.launch
rgmc/src/pointcloud_filter_testing/src/: filter_pcd.cpp  filter_pcd_publisher.cpp
rgmc/src/real_sense_alignment_pcl/: CMakeLists.txt  package.xml
rgmc/src/real_sense_alignment_pcl/data/: object_converted.pcd
rgmc/src/real_sense_alignment_pcl/launch/: real_sense_alignment.launch
rgmc/src/real_sense_alignment_pcl/src/: real_sense_alignment.cpp
rgmc/src/realsense_pipeline/: CMakeLists.txt  package.xml
rgmc/src/realsense_pipeline/launch/: build_tree.launch  capture_pcd.launch  clustering.launch  nearest_neighbor.launch  original_neighbor.launch
rgmc/src/realsense_pipeline/msg/: ClusterArray.msg
rgmc/src/realsense_pipeline/src/: capture_pcd.cpp  clustering.cpp  nearest_neighbor.cpp  original_neighbor.cpp
rgmc/src/rgmc_utils/: CMakeLists.txt  package.xml  setup.py
rgmc/src/rgmc_utils/config/: board_offsets.yaml  kit_layout_offsets.yaml
rgmc/src/rgmc_utils/scripts/: adc_to_joint  extract_cad_poses_node
rgmc/src/rgmc_utils/src/: yaml2tf_node.cpp
rgmc/src/robust_pose_estimation_pcl/: CMakeLists.txt  package.xml
rgmc/src/robust_pose_estimation_pcl/launch/: robust_pose_estimation_pcl.launch
rgmc/src/robust_pose_estimation_pcl/src/: alignment_prerejective.cpp
rgmc/src/visualization_node_pkg/: CMakeLists.txt  package.xml
rgmc/src/visualization_node_pkg/launch/: visualization.launch
rgmc/src/visualization_node_pkg/src/: visualization2.cpp  visualization_node.cpp
robot_pos/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
(+726 files in other folders)
