<?xml version="1.0"?>
<package format="2">

  <!-- Package info -->
  <name>ndx_manipulation</name>
  <version>0.0.0</version>
  <description>The ndx_manipulation package</description>

  <!-- Maintainer -->
  <maintainer email="ggor290@aucklanduni.ac.nz">Gal Gorjup</maintainer>

  <!-- License -->
  <license>NDX</license>

  <!-- Authors -->
  <author email="ggor290@aucklanduni.ac.nz">Gal Gorjup</author>
  <author email="adwi592@aucklanduni.ac.nz">Anany Dwivedi</author>
  <author email="ggao102@aucklanduni.ac.nz">Gao Geng</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Export -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
