<?xml version="1.0"?>
<package format="2">
  <name>pcl_object_recognition</name>
  <version>0.0.1</version>
  <description>This package provides object recognition capabilities using PCL.</description>

  <maintainer email="vcol41@example.com">vcol141</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>FLANN</build_depend>
  <build_depend>HDF5</build_depend>
  <build_depend>realsense2</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>Boost</exec_depend>
  <exec_depend>FLANN</exec_depend>
  <exec_depend>HDF5</exec_depend>
  <exec_depend>realsense2</exec_depend>

  <export>
  </export>
</package>
