<?xml version="1.0"?>
<package format="2">
  <name>pcl_pose_estimation</name>
  <version>0.0.0</version>
  <description>The pcl_pose_estimation package</description>

  <maintainer email="akoh751@todo.todo">akoh751</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>flann</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>std_msgs</build_depend>

  
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>flann</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>hdf5</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>flann</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hdf5</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
