<?xml version="1.0"?>
<package format="2">
  <name>realsense_pipeline</name>
  <version>0.0.0</version>
  <description>The realsense_pipeline package</description>

  <maintainer email="mechp4p@todo.todo">mechp4p</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>flann</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>flann</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>hdf5</build_export_depend>


  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>flann</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>hdf5</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend> 

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
